--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         }
     </script>   
     <div id="root"></div>
+    <script src="./node_modules/amazon-cognito-identity-js/dist/amazon-cognito-identity.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
